--- a/src/main/resources/com/example/demo/dashboard.fxml
+++ b/src/main/resources/com/example/demo/dashboard.fxml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="750" prefWidth="1200" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.DashboardController">
+<BorderPane prefHeight="750" prefWidth="1200" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.DashboardController">
 
     <!-- ========= SIDEBAR ========= -->
     <left>
@@ -41,9 +33,9 @@
                     <Insets bottom="10" left="10" right="10" top="1" />
                 </padding>
 
-                <Button alignment="TOP_LEFT" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Dashboard">
+                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Dashboard">
                     <graphic>
-                        <ImageView fitHeight="18" fitWidth="18">
+                        <ImageView fx:id="iconDashboard" fitHeight="18" fitWidth="18">
                             <image>
                                 <Image url="@imgs/home.png" />
                             </image>
@@ -51,49 +43,49 @@
                     </graphic>
                 </Button>
 
-                <Button alignment="TOP_LEFT" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="All File">
+                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="All File">
                     <graphic>
-                        <ImageView fitHeight="18" fitWidth="18">
+                        <ImageView fx:id="iconFile" fitHeight="18" fitWidth="18">
                             <image>
-                                <Image url="@imgs/folder.png" />
+                                <Image url="@imgs/folder2.png" />
                             </image>
                         </ImageView>
                     </graphic>
                 </Button>
 
-                <Button alignment="TOP_LEFT" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Shared with Me">
+                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Shared with Me">
                     <graphic>
-                        <ImageView fitHeight="18" fitWidth="18">
+                        <ImageView fx:id="iconShared" fitHeight="18" fitWidth="18">
                             <image>
-                                <Image url="@imgs/group.png" />
+                                <Image url="@imgs/manyavt.png" />
                             </image>
                         </ImageView>
                     </graphic>
                 </Button>
 
-                <Button alignment="TOP_LEFT" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Inbox">
+                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Inbox">
                     <graphic>
-                        <ImageView fitHeight="18" fitWidth="18">
+                        <ImageView fx:id="iconInbox" fitHeight="18" fitWidth="18">
                             <image>
-                                <Image url="@imgs/bubble-chat.png" />
+                                <Image url="@imgs/chat2.png" />
                             </image>
                         </ImageView>
                     </graphic>
                 </Button>
 
-                <Button alignment="TOP_LEFT" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Recent">
+                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Recent">
                     <graphic>
-                        <ImageView fitHeight="18" fitWidth="18">
+                        <ImageView fx:id="iconRecent" fitHeight="18" fitWidth="18">
                             <image>
-                                <Image url="@imgs/time.png" />
+                                <Image url="@imgs/clock.png" />
                             </image>
                         </ImageView>
                     </graphic>
                 </Button>
 
-                <Button alignment="TOP_LEFT" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Starred">
+                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Starred">
                     <graphic>
-                        <ImageView fitHeight="18" fitWidth="18">
+                        <ImageView fx:id="iconStar" fitHeight="18" fitWidth="18">
                             <image>
                                 <Image url="@imgs/star.png" />
                             </image>
@@ -101,9 +93,9 @@
                     </graphic>
                 </Button>
 
-                <Button alignment="TOP_LEFT" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Trash">
+                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Trash">
                     <graphic>
-                        <ImageView fitHeight="18" fitWidth="18">
+                        <ImageView fx:id="iconTrash" fitHeight="18" fitWidth="18">
                             <image>
                                 <Image url="@imgs/trash.png" />
                             </image>
@@ -187,26 +179,42 @@
 
             <!-- TOP CARDS -->
             <HBox alignment="TOP_CENTER" spacing="20">
-
-                <VBox prefHeight="136.0" prefWidth="351.0" spacing="10" style="-fx-background-color: #FFD43B; -fx-background-radius: 15;">
+                <!-- Storage Card -->
+                <HBox fx:id="storageCard" prefHeight="136.0" prefWidth="351.0" spacing="20" style="-fx-background-color: #FFD43B; -fx-background-radius: 15;">
                     <padding>
                         <Insets bottom="20" left="20" right="20" top="20" />
                     </padding>
-                    <Label style="-fx-font-size: 28px; -fx-font-weight: bold;" text="77%" />
-                    <Label text="Storage" />
-                    <Label text="770.5 GB / 1000 GB" />
-                </VBox>
 
-                <VBox prefHeight="136.0" prefWidth="350.0" spacing="10" style="-fx-background-color: #A78BFA; -fx-background-radius: 15;">
+                    <!-- Vòng tròn phần trăm -->
+                    <StackPane fx:id="storageCircle" />
+
+                    <!-- Text bên cạnh -->
+                    <VBox alignment="CENTER_LEFT" spacing="5">
+                        <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Storage" />
+                        <Label style="-fx-font-size: 15px;" text="770.5 GB / 1000 GB" />
+                    </VBox>
+
+                </HBox>
+
+                <!-- Transfer Card -->
+                <HBox fx:id="transferCard" prefHeight="136.0" prefWidth="350.0" spacing="20" style="-fx-background-color: #A78BFA; -fx-background-radius: 15;">
                     <padding>
                         <Insets bottom="20" left="20" right="20" top="20" />
                     </padding>
-                    <Label style="-fx-font-size: 28px; -fx-font-weight: bold;" text="10%" />
-                    <Label text="Transfer" />
-                    <Label text="100 GB / 1000 GB" />
-                </VBox>
 
+                    <!-- Vòng tròn phần trăm -->
+                    <StackPane fx:id="transferCircle" />
+
+                    <!-- Text bên cạnh -->
+                    <VBox alignment="CENTER_LEFT" spacing="5">
+                        <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Transfer" />
+                        <Label style="-fx-font-size: 15px;" text="100 GB / 1000 GB" />
+                    </VBox>
+
+                </HBox>
             </HBox>
+
+
 
             <!-- USED STORAGE WRAPPER -->
             <HBox alignment="CENTER">
@@ -218,50 +226,62 @@
                     <Label style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Used Storage" />
 
                     <HBox alignment="CENTER" prefWidth="571.0" spacing="30">
-                        <Label text="6% Cloud Drive" />
-                        <Label text="9% Trash" />
-                        <Label text="20% Available" />
+                        <Label alignment="TOP_LEFT" contentDisplay="TEXT_ONLY" prefHeight="18.0" prefWidth="127.0" text="77% Cloud Drive" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="414.0" text="9% Trash" />
+                        <Label alignment="TOP_RIGHT" prefHeight="18.0" prefWidth="115.0" text="14% Available" />
                     </HBox>
 
-                    <ProgressBar prefWidth="400" progress="0.40" />
+                    <ProgressBar fx:id="usedStorageBar" prefHeight="16.0" prefWidth="692.0" progress="0.7" style="-fx-accent: #3ea9f0;" />
                 </VBox>
             </HBox>
+
 
 
             <!-- RECENT ADDED WRAPPER -->
             <HBox alignment="CENTER">
                 <VBox maxWidth="765.0" prefHeight="254.0" prefWidth="721.0" spacing="15" style="-fx-background-color: #FFFFFF; -fx-background-radius: 12;">
-
                     <padding>
                         <Insets bottom="20" left="20" right="20" top="20" />
                     </padding>
 
                     <Label style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Recent Added" />
 
-                    <HBox spacing="20" style="-fx-background-color: #FFFFFF; -fx-background-radius: 10;">
+                    <!-- File Project -->
+                    <HBox spacing="15" style="-fx-background-color: #FFFFFF; -fx-background-radius: 10; -fx-border-color: rgba(0,0,0,0.1); -fx-border-width: 1; -fx-border-radius: 10;">
                         <padding>
                             <Insets bottom="15" left="15" right="15" top="15" />
                         </padding>
+                        <ImageView fitHeight="24" fitWidth="24">
+                            <image><Image url="@imgs/file.png"/></image>
+                        </ImageView>
                         <Label text="File Project" />
                         <Pane HBox.hgrow="ALWAYS" />
                         <Label text="600 MB" />
                         <Label text="10/06/2022" />
                     </HBox>
 
-                    <HBox spacing="20" style="-fx-background-color: #FFFFFF; -fx-background-radius: 10;">
+                    <!-- New Folder -->
+                    <HBox spacing="15" style="-fx-background-color: #FFFFFF; -fx-background-radius: 10; -fx-border-color: rgba(0,0,0,0.1); -fx-border-width: 1; -fx-border-radius: 10;">
                         <padding>
                             <Insets bottom="15" left="15" right="15" top="15" />
                         </padding>
+                        <ImageView fitHeight="24" fitWidth="24">
+                            <image><Image url="@imgs/file.png"/></image>
+                        </ImageView>
                         <Label text="New Folder" />
                         <Pane HBox.hgrow="ALWAYS" />
                         <Label text="2.3 GB" />
                         <Label text="29/05/2022" />
                     </HBox>
 
-                    <HBox spacing="20" style="-fx-background-color: #FFFFFF; -fx-background-radius: 10;">
+                    <!-- My Image -->
+                    <HBox spacing="15" style="-fx-background-color: #FFFFFF; -fx-background-radius: 10; -fx-border-color: rgba(0,0,0,0.1); -fx-border-width: 1; -fx-border-radius: 10;">
                         <padding>
                             <Insets bottom="15" left="15" right="15" top="15" />
                         </padding>
+                        <ImageView fitHeight="24" fitWidth="24">
+                            <image><Image url="@imgs/file.png"/></image>
+                        </ImageView>
                         <Label text="My Image" />
                         <Pane HBox.hgrow="ALWAYS" />
                         <Label text="948 MB" />
@@ -270,6 +290,8 @@
 
                 </VBox>
             </HBox>
+
+
 
 
 
