--- a/src/main/resources/com/example/demo/dashboard.fxml
+++ b/src/main/resources/com/example/demo/dashboard.fxml
@@ -33,7 +33,8 @@
                     <Insets bottom="10" left="10" right="10" top="1" />
                 </padding>
 
-                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Dashboard">
+                <Button fx:id="btnDashboard" alignment="TOP_LEFT" graphicTextGap="10"
+                        prefWidth="200" styleClass="sidebar-button" text="Dashboard">
                     <graphic>
                         <ImageView fx:id="iconDashboard" fitHeight="18" fitWidth="18">
                             <image>
@@ -43,7 +44,8 @@
                     </graphic>
                 </Button>
 
-                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="All File">
+                <Button fx:id="btnAllFile" alignment="TOP_LEFT" graphicTextGap="10"
+                        prefWidth="200" styleClass="sidebar-button" text="All File">
                     <graphic>
                         <ImageView fx:id="iconFile" fitHeight="18" fitWidth="18">
                             <image>
@@ -53,7 +55,8 @@
                     </graphic>
                 </Button>
 
-                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Shared with Me">
+                <Button fx:id="btnShared" alignment="TOP_LEFT" graphicTextGap="10"
+                        prefWidth="200" styleClass="sidebar-button" text="Shared with Me">
                     <graphic>
                         <ImageView fx:id="iconShared" fitHeight="18" fitWidth="18">
                             <image>
@@ -63,7 +66,8 @@
                     </graphic>
                 </Button>
 
-                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Inbox">
+                <Button fx:id="btnInbox" alignment="TOP_LEFT" graphicTextGap="10"
+                        prefWidth="200" styleClass="sidebar-button" text="Inbox">
                     <graphic>
                         <ImageView fx:id="iconInbox" fitHeight="18" fitWidth="18">
                             <image>
@@ -73,7 +77,8 @@
                     </graphic>
                 </Button>
 
-                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Recent">
+                <Button fx:id="btnRecent" alignment="TOP_LEFT" graphicTextGap="10"
+                        prefWidth="200" styleClass="sidebar-button" text="Recent">
                     <graphic>
                         <ImageView fx:id="iconRecent" fitHeight="18" fitWidth="18">
                             <image>
@@ -83,7 +88,8 @@
                     </graphic>
                 </Button>
 
-                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Starred">
+                <Button fx:id="btnStarred" alignment="TOP_LEFT" graphicTextGap="10"
+                        prefWidth="200" styleClass="sidebar-button" text="Starred">
                     <graphic>
                         <ImageView fx:id="iconStar" fitHeight="18" fitWidth="18">
                             <image>
@@ -93,7 +99,8 @@
                     </graphic>
                 </Button>
 
-                <Button alignment="TOP_LEFT" graphicTextGap="10" prefWidth="200" style="-fx-background-color: transparent; -fx-font-size: 15px;" text="Trash">
+                <Button fx:id="btnTrash" alignment="TOP_LEFT" graphicTextGap="10"
+                        prefWidth="200" styleClass="sidebar-button" text="Trash">
                     <graphic>
                         <ImageView fx:id="iconTrash" fitHeight="18" fitWidth="18">
                             <image>
