--- a/src/main/resources/com/example/demo/login.fxml
+++ b/src/main/resources/com/example/demo/login.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.effect.ColorAdjust?>
 <VBox xmlns="http://javafx.com/javafx/21"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.example.demo.Controller"
+      fx:controller="com.example.demo.controller.LoginController"
       alignment="CENTER"
       spacing="20"
       prefWidth="1200" prefHeight="750">
