--- a/src/main/resources/com/example/demo/dashboard_content.fxml
+++ b/src/main/resources/com/example/demo/dashboard_content.fxml
@@ -42,10 +42,8 @@
                 </image>
             </ImageView>
 
-            <ImageView fitWidth="25" fitHeight="25">
-                <image>
-                    <Image url="@imgs/man.png"/>
-                </image>
+            <ImageView fx:id="avatarBtn" fitHeight="25" fitWidth="25">
+                <image><Image url="@imgs/man.png"/></image>
             </ImageView>
         </HBox>
     </HBox>
