--- a/src/main/resources/com/example/demo/sidebar.fxml
+++ b/src/main/resources/com/example/demo/sidebar.fxml
@@ -5,141 +5,130 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+<?import java.net.URL?>
 
-<VBox prefWidth="200" spacing="20" xmlns="http://javafx.com/javafx/17"
+<VBox prefWidth="220" spacing="20"
+      xmlns="http://javafx.com/javafx/17"
       xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.example.demo.controller.SidebarController"
-      style="-fx-background-color: #FFFFFF;">
+      style="-fx-background-color: #FFFFFF; -fx-padding: 20 10 20 10;">
 
-    <!-- Logo Area -->
-    <VBox alignment="CENTER_LEFT" spacing="10">
-        <padding>
-            <Insets bottom="20" left="20" right="20" top="20"/>
-        </padding>
-        <HBox alignment="CENTER_LEFT" spacing="10">
-            <ImageView fitHeight="32" fitWidth="32">
-                <image>
-                    <Image url="@imgs/cloud.png"/>
-                </image>
-            </ImageView>
-            <Label alignment="TOP_LEFT" style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Skybox."/>
-        </HBox>
+    <!-- Load CSS -->
+    <stylesheets>
+        <URL value="@css/sidebar.css"/>
+    </stylesheets>
+
+    <!-- LOGO -->
+    <HBox alignment="CENTER_LEFT" spacing="12">
+        <ImageView fitHeight="35" fitWidth="35">
+            <image><Image url="@imgs/cloud.png"/></image>
+        </ImageView>
+
+        <Label text="Skybox."
+               style="-fx-font-size: 22px; -fx-font-weight: bold;"/>
+    </HBox>
+
+    <!-- MENU LIST -->
+    <VBox spacing="6" prefWidth="200"
+          style="-fx-padding: 10 0 0 0;">
+
+        <Button fx:id="btnDashboard" text="Dashboard"
+                graphicTextGap="12" prefHeight="44"
+                styleClass="sidebar-btn">
+            <graphic>
+                <ImageView fitHeight="20" fitWidth="20">
+                    <image><Image url="@imgs/home.png"/></image>
+                </ImageView>
+            </graphic>
+        </Button>
+
+        <Button fx:id="btnAllFile" text="All Files"
+                graphicTextGap="12" prefHeight="44"
+                styleClass="sidebar-btn">
+            <graphic>
+                <ImageView fitHeight="20" fitWidth="20">
+                    <image><Image url="@imgs/folder2.png"/></image>
+                </ImageView>
+            </graphic>
+        </Button>
+
+        <Button fx:id="btnShared" text="Shared with Me"
+                graphicTextGap="12" prefHeight="44"
+                styleClass="sidebar-btn">
+            <graphic>
+                <ImageView fitHeight="20" fitWidth="20">
+                    <image><Image url="@imgs/manyavt.png"/></image>
+                </ImageView>
+            </graphic>
+        </Button>
+
+        <Button fx:id="btnInbox" text="Inbox"
+                graphicTextGap="12" prefHeight="44"
+                styleClass="sidebar-btn">
+            <graphic>
+                <ImageView fitHeight="20" fitWidth="20">
+                    <image><Image url="@imgs/chat2.png"/></image>
+                </ImageView>
+            </graphic>
+        </Button>
+
+        <Button fx:id="btnRecent" text="Recent"
+                graphicTextGap="12" prefHeight="44"
+                styleClass="sidebar-btn">
+            <graphic>
+                <ImageView fitHeight="20" fitWidth="20">
+                    <image><Image url="@imgs/clock.png"/></image>
+                </ImageView>
+            </graphic>
+        </Button>
+
+        <Button fx:id="btnStarred" text="Starred"
+                graphicTextGap="12" prefHeight="44"
+                styleClass="sidebar-btn">
+            <graphic>
+                <ImageView fitHeight="20" fitWidth="20">
+                    <image><Image url="@imgs/star.png"/></image>
+                </ImageView>
+            </graphic>
+        </Button>
+
+        <Button fx:id="btnTrash" text="Trash"
+                graphicTextGap="12" prefHeight="44"
+                styleClass="sidebar-btn">
+            <graphic>
+                <ImageView fitHeight="20" fitWidth="20">
+                    <image><Image url="@imgs/trash.png"/></image>
+                </ImageView>
+            </graphic>
+        </Button>
+
     </VBox>
 
-    <!-- Menu Buttons -->
-    <VBox spacing="15">
-        <padding>
-            <Insets bottom="10" left="10" right="10" top="1"/>
-        </padding>
-
-        <Button fx:id="btnDashboard" alignment="TOP_LEFT" graphicTextGap="10"
-                prefWidth="200" styleClass="sidebar-button" text="Dashboard">
-            <graphic>
-                <ImageView fx:id="iconDashboard" fitHeight="18" fitWidth="18">
-                    <image>
-                        <Image url="@imgs/home.png"/>
-                    </image>
-                </ImageView>
-            </graphic>
-        </Button>
-
-        <Button fx:id="btnAllFile" alignment="TOP_LEFT" graphicTextGap="10"
-                prefWidth="200" styleClass="sidebar-button" text="All File">
-            <graphic>
-                <ImageView fx:id="iconFile" fitHeight="18" fitWidth="18">
-                    <image>
-                        <Image url="@imgs/folder2.png"/>
-                    </image>
-                </ImageView>
-            </graphic>
-        </Button>
-
-        <Button fx:id="btnShared" alignment="TOP_LEFT" graphicTextGap="10"
-                prefWidth="200" styleClass="sidebar-button" text="Shared with Me">
-            <graphic>
-                <ImageView fx:id="iconShared" fitHeight="18" fitWidth="18">
-                    <image>
-                        <Image url="@imgs/manyavt.png"/>
-                    </image>
-                </ImageView>
-            </graphic>
-        </Button>
-
-        <Button fx:id="btnInbox" alignment="TOP_LEFT" graphicTextGap="10"
-                prefWidth="200" styleClass="sidebar-button" text="Inbox">
-            <graphic>
-                <ImageView fx:id="iconInbox" fitHeight="18" fitWidth="18">
-                    <image>
-                        <Image url="@imgs/chat2.png"/>
-                    </image>
-                </ImageView>
-            </graphic>
-        </Button>
-
-        <Button fx:id="btnRecent" alignment="TOP_LEFT" graphicTextGap="10"
-                prefWidth="200" styleClass="sidebar-button" text="Recent">
-            <graphic>
-                <ImageView fx:id="iconRecent" fitHeight="18" fitWidth="18">
-                    <image>
-                        <Image url="@imgs/clock.png"/>
-                    </image>
-                </ImageView>
-            </graphic>
-        </Button>
-
-        <Button fx:id="btnStarred" alignment="TOP_LEFT" graphicTextGap="10"
-                prefWidth="200" styleClass="sidebar-button" text="Starred">
-            <graphic>
-                <ImageView fx:id="iconStar" fitHeight="18" fitWidth="18">
-                    <image>
-                        <Image url="@imgs/star.png"/>
-                    </image>
-                </ImageView>
-            </graphic>
-        </Button>
-
-        <Button fx:id="btnTrash" alignment="TOP_LEFT" graphicTextGap="10"
-                prefWidth="200" styleClass="sidebar-button" text="Trash">
-            <graphic>
-                <ImageView fx:id="iconTrash" fitHeight="18" fitWidth="18">
-                    <image>
-                        <Image url="@imgs/trash.png"/>
-                    </image>
-                </ImageView>
-            </graphic>
-        </Button>
-    </VBox>
-
-    <!-- Spacer -->
     <Region VBox.vgrow="ALWAYS"/>
 
-    <!-- Upgrade Card -->
-    <VBox prefWidth="180" spacing="20" style="-fx-background-color: #FFFFFF;">
-        <VBox prefHeight="220.0" prefWidth="200.0" spacing="10"
-              style="-fx-background-color: #3ea9f0; -fx-background-radius: 12;">
-            <padding>
-                <Insets bottom="20" left="20" right="20" top="20"/>
-            </padding>
+    <!-- BOTTOM UPGRADE CARD -->
+    <VBox spacing="10"
+          prefWidth="200"
+          style="-fx-background-color: #3EA9F0; -fx-background-radius: 14; -fx-padding: 20;">
 
-            <Label style="-fx-font-size: 18px; -fx-font-weight: bold;" text="64% Used"/>
-            <Label text="640 GB of 1000 GB Used"/>
+        <Label text="64% Used"
+               style="-fx-font-size: 18px; -fx-text-fill: white; -fx-font-weight: bold;"/>
 
-            <Region VBox.vgrow="ALWAYS"/>
+        <Label text="640 GB of 1000 GB"
+               style="-fx-text-fill: #EAF7FF;"/>
 
-            <Label alignment="BOTTOM_CENTER" text="Upgrade Premium to">
-                <font><Font size="15"/></font>
-            </Label>
-            <Label alignment="BOTTOM_CENTER" text="Get more Space">
-                <font><Font size="15"/></font>
-            </Label>
+        <ProgressBar progress="0.64"
+                     prefWidth="150"
+                     style="-fx-accent: white;"/>
 
-            <Button prefWidth="150"
-                    style="-fx-background-color: #FFF; -fx-text-fill: black; -fx-background-radius: 3;"
-                    text="Upgrade Now">
-                <VBox.margin><Insets bottom="10"/></VBox.margin>
-            </Button>
-        </VBox>
         <Region VBox.vgrow="ALWAYS"/>
+
+        <Button text="Upgrade Now"
+                prefWidth="150"
+                style="-fx-background-color: white;
+                       -fx-text-fill: #3EA9F0;
+                       -fx-background-radius: 8;
+                       -fx-font-weight: bold;"/>
     </VBox>
 
 </VBox>
