--- a/src/main/resources/com/example/demo/login.fxml
+++ b/src/main/resources/com/example/demo/login.fxml
@@ -28,17 +28,14 @@
         </effect>
     </ImageView>
 
-    <!-- Tiêu đề -->
     <Label text="Internal Cloud Storage System"
            style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: white;"/>
 
-    <!-- Form login container -->
     <VBox spacing="15" alignment="CENTER"
           maxWidth="400" style="-fx-background-color: rgba(255,255,255,0.85);
                                 -fx-background-radius: 15;
                                 -fx-padding: 25;">
 
-        <!-- Username -->
         <VBox spacing="5" maxWidth="350">
             <Label text="Username or Email"
                    style="-fx-font-size: 14px; -fx-text-fill: black;" />
@@ -48,7 +45,6 @@
                        style="-fx-padding: 10; -fx-background-radius: 8;" />
         </VBox>
 
-        <!-- Password -->
         <VBox spacing="5" maxWidth="350">
             <Label text="Password"
                    style="-fx-font-size: 14px; -fx-text-fill: black;" />
@@ -57,15 +53,19 @@
                            maxWidth="350" prefWidth="350"
                            style="-fx-padding: 10; -fx-background-radius: 8;" />
         </VBox>
+        
+        <Label fx:id="lblError" 
+               maxWidth="350" 
+               wrapText="true" 
+               alignment="CENTER"
+               style="-fx-text-fill: #d32f2f; -fx-font-size: 13px; -fx-font-weight: bold;"/>
 
-        <!-- Nút login -->
         <Button text="Login"
                 onAction="#login"
                 maxWidth="350" prefWidth="350"
                 style="-fx-background-color: #1976D2; -fx-text-fill: white;
                        -fx-font-size: 16px; -fx-padding: 10; -fx-background-radius: 10;" />
 
-        <!-- Link tạo tài khoản -->
         <HBox alignment="CENTER" spacing="5">
             <Label text="Don't have an account?" style="-fx-text-fill: black;" />
             <Hyperlink text="Create Account" onAction="#createAccount" />
