--- a/src/main/resources/com/example/demo/register.fxml
+++ b/src/main/resources/com/example/demo/register.fxml
@@ -26,21 +26,19 @@
     <Label text="Create Your Skybox Account"
            style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: white;"/>
 
-    <!-- Form -->
     <VBox spacing="15" alignment="CENTER"
           maxWidth="420" style="-fx-background-color: rgba(255,255,255,0.85);
                                 -fx-background-radius: 15;
                                 -fx-padding: 25;">
 
-        <!-- Fullname -->
         <VBox spacing="5" maxWidth="350">
-            <Label text="Full Name" style="-fx-font-size: 14px; -fx-text-fill: black;" />
-            <TextField fx:id="txtFullName"
-                       promptText="Enter your full name"
+            <Label text="Username" style="-fx-font-size: 14px; -fx-text-fill: black;" />
+            
+            <TextField fx:id="txtUsername"
+                       promptText="Enter your username"
                        prefWidth="350" />
         </VBox>
 
-        <!-- Email -->
         <VBox spacing="5" maxWidth="350">
             <Label text="Email" style="-fx-font-size: 14px; -fx-text-fill: black;" />
             <TextField fx:id="txtEmail"
@@ -48,7 +46,6 @@
                        prefWidth="350" />
         </VBox>
 
-        <!-- Password -->
         <VBox spacing="5" maxWidth="350">
             <Label text="Password" style="-fx-font-size: 14px; -fx-text-fill: black;" />
             <PasswordField fx:id="txtPassword"
@@ -56,22 +53,20 @@
                            prefWidth="350" />
         </VBox>
 
-        <!-- Confirm Password -->
         <VBox spacing="5" maxWidth="350">
             <Label text="Confirm Password" style="-fx-font-size: 14px; -fx-text-fill: black;" />
+            
             <PasswordField fx:id="txtConfirmPassword"
                            promptText="Re-enter your password"
                            prefWidth="350" />
         </VBox>
 
-        <!-- Register button -->
         <Button text="Create Account"
                 onAction="#register"
                 maxWidth="350"
                 style="-fx-background-color: #1976D2; -fx-text-fill: white;
                        -fx-font-size: 16px; -fx-padding: 10; -fx-background-radius: 10;" />
 
-        <!-- Link quay về login -->
         <HBox alignment="CENTER" spacing="5">
             <Label text="Already have an account?" style="-fx-text-fill: black;" />
             <Hyperlink text="Login" onAction="#gotoLogin" />
