--- a/src/main/resources/com/example/demo/login.fxml
+++ b/src/main/resources/com/example/demo/login.fxml
@@ -10,15 +10,18 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
-
 <?import javafx.scene.effect.ColorAdjust?>
+
 <VBox xmlns="http://javafx.com/javafx/21"
       xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.example.demo.controller.LoginController"
       alignment="CENTER"
       spacing="20"
-      prefWidth="1200" prefHeight="750">
-
+      prefWidth="1200" prefHeight="750"
+      style="-fx-background-image: url('/com/example/demo/imgs/fullcloud2.jpg');
+       -fx-background-size: cover;
+       -fx-background-position: center;
+       -fx-background-repeat: no-repeat;">
     <ImageView fitWidth="90" fitHeight="90">
         <image>
             <Image url="@imgs/cloud.png" />
@@ -53,10 +56,10 @@
                            maxWidth="350" prefWidth="350"
                            style="-fx-padding: 10; -fx-background-radius: 8;" />
         </VBox>
-        
-        <Label fx:id="lblError" 
-               maxWidth="350" 
-               wrapText="true" 
+
+        <Label fx:id="lblError"
+               maxWidth="350"
+               wrapText="true"
                alignment="CENTER"
                style="-fx-text-fill: #d32f2f; -fx-font-size: 13px; -fx-font-weight: bold;"/>
 
